# ID-Sensor

./: .gitignore  README.md
config/: cnn_lstm.json  fcn.json  lr.json
data/: README.md  XL.csv  YL.csv
datagen/: Cargo.toml  README.md
datagen/src/: batch_gen.rs  config.rs  data.rs  main.rs  task.rs  types.rs  utils.rs
docker/: Dockerfile  build_image.ps1  requirements.txt
src/: evaluate.py  main.py
src/data/: __init__.py  api.py  dataset.py
src/models/: __init__.py  cnn_lstm.py  fcn.py  lr.py
src/training/: __init__.py  scheduler.py  training.py
