[package]
name = "datagen"
version = "0.1.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
byteorder = "1.3.1"
csv = "1.0.5"
lazy_static = "1.2.0"
parking_lot = "0.7.1"
rand = "0.6.5"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
streaming-stats = "0.2.2"
